--- a/sample-acmsmall.tex
+++ b/sample-acmsmall.tex
@@ -71,11 +71,7 @@ this article, we propose MMSN, which takes advantage of
 multifrequency availability while, at the same time, takes into
 consideration the restrictions of wireless sensor networks. Through
 extensive experiments, MMSN exhibits the prominent ability to utilize
-parallel transmissions among neighboring nodes. When multiple physical
-frequencies are available, it also achieves increased energy
-efficiency, demonstrating the ability to work against radio
-interference and the tolerance to a wide range of measured time
-synchronization errors.
+parallel transmissions among neighboring nodes. 
 \end{abstract}
 
 
