Documentation: "numberic" ==> "numeric"

--- a/acmart.dtx
+++ b/acmart.dtx
@@ -973,7 +973,7 @@
 %
 % \DescribeMacro{\citestyle}%
 % If you use |natbib|, you can select one of two predefined sitation
-% styles: the author-year format |acmauthoryear| or the numberic
+% styles: the author-year format |acmauthoryear| or the numeric
 % format |acmnumeric| using the command \cs{sitestyle}, for example,
 % \begin{verbatim}
 % \citestyle{acmnumeric}
