Make robust against uninitialized journal metadata
When \@acmMonth or \@acmArticleSeq are uninitialized by a document using
a journal format, typesetting stops with an uninformative:
  ! Missing number, treated as zero.

This might happen when an author transitions a conference paper to a
journal submission (or, in the PACM future, when a submission is
transitioned from a traditional conference proceedings format to the
PACM conference proceedings format).

--- a/README
+++ b/README
@@ -23,3 +23,5 @@ version 1.13    Formatting changes: headers, folios etc.
 version 1.14    Warn about undefined citation styles; move definitions
                 of acmauthoryear and acmnumeric citation styles before
                 use.
+
+version 1.15    Make robust against uninitialized journal metadata.
