--- a/sample-acmsmall.tex
+++ b/sample-acmsmall.tex
@@ -45,17 +45,43 @@
 \title[A Multifrequency MAC for Wireless Sensor]{A Multifrequency MAC
   Specially Designed for Wireless Sensor  Network Applications}  
 \author{Gang Zhou}
-\affiliation{College of William and Mary}
+\orcid{1234-5678-9012-3456}
+\affiliation{%
+  \institution{College of William and Mary}
+  \streetaddress{104 Jamestown Rd}
+  \city{Williamsburg}
+  \state{VA}
+  \postcode{23185}
+  \country{USA}}
 \author{Yafeng Wu}
-\affiliation{University of Virginia}
+\affiliation{%
+  \institution{University of Virginia}
+  \department{School of Engineering}
+  \city{Charlottesville}
+  \state{VA}
+  \postcode{22903}
+  \country{USA}
+}
 \author{Ting Yan}
-\affiliation{Eaton Innovation Center}
+\affiliation{%
+  \institution{Eaton Innovation Center}
+  \city{Prague}
+  \country{Czech Republic}}
 \author{Tian He}
-\affiliation{University of Minnesota}
+\affiliation{%
+  \institution{University of Minnesota}
+  \country{USA}}
 \author{Chengdu Huang}
 \author{John A. Stankovic}
 \author{Tarek F. Abdelzaher}
-\affiliation{University of Virginia}
+\affiliation{%
+  \institution{University of Virginia}
+  \department{School of Engineering}
+  \city{Charlottesville}
+  \state{VA}
+  \postcode{22903}
+  \country{USA}
+}
 
 \begin{abstract}
 Multifrequency media access control has been well understood in
