--- a/sample-manuscript.tex
+++ b/sample-manuscript.tex
@@ -35,25 +35,56 @@
 \title{A Multifrequency MAC Specially Designed for Wireless Sensor
   Network Applications} 
  \titlenote{This is a titlenote}
-% \subtitle{This is a subtitle}
-% \subtitlenote{Subtitle note}
+ \subtitle{This is a subtitle}
+ \subtitlenote{Subtitle note}
 \author{Gang Zhou}
-% \authornote{The corresponding author}
+\authornote{The corresponding author}
+\orcid{1234-5678-9012-3456}
 \email{zhou@uva.edu}
 \author{Yafeng Wu}
 \email{ywu@uva.edu}
-\affiliation{University of Virginia}
+\affiliation{%
+  \institution{University of Virginia}
+  \department{School of Engineering}
+  \city{Charlottesville}
+  \state{VA}
+  \postcode{22903}
+  \country{USA}
+}
 \author{Ting Yan}
-\affiliation{Eaton Innovation Center}
+\affiliation{%
+  \institution{Eaton Innovation Center}
+  \city{Prague}
+  \country{Czech Republic}}
 \author{Tian He}
-\affiliation{University of Minnesota}
+\affiliation{%
+  \institution{University of Minnesota}
+  \country{USA}}
 \author{Chengdu Huang}
-\affiliation{Google}
+\affiliation{%
+  \institution{Google}
+  \country{USA}}
 \author{John A. Stankovic}
-\affiliation{University of Virginia}
+\affiliation{%
+  \institution{University of Virginia}
+  \department{School of Engineering}
+  \city{Charlottesville}
+  \state{VA}
+  \postcode{22903}
+  \country{USA}
+}
 \author{Tarek F. Abdelzaher}
-\affiliation{University of Illinois at Urbana-Champaign}
-\affiliation{University of Virginia}
+\affiliation{%
+  \institution{University of Illinois at Urbana-Champaign}
+  \country{USA}}
+\affiliation{%
+  \institution{University of Virginia}
+  \department{School of Engineering}
+  \city{Charlottesville}
+  \state{VA}
+  \postcode{22903}
+  \country{USA}
+}
 
 \begin{abstract}
 Multifrequency media access control has been well understood in
