--- a/sample-acmlarge.tex
+++ b/sample-acmlarge.tex
@@ -48,21 +48,44 @@
 \title{A Multifrequency MAC Specially Designed for Wireless Sensor
   Network Applications} 
 \author{Gang Zhou}
-\email{zhou@uva.edu}
+\orcid{1234-5678-9012-3456}
+\affiliation{%
+  \institution{College of William and Mary}
+  \streetaddress{104 Jamestown Rd}
+  \city{Williamsburg}
+  \state{VA}
+  \postcode{23185}
+  \country{USA}}
 \author{Yafeng Wu}
-\email{ywu@uva.edu}
-\affiliation{University of Virginia}
+\affiliation{%
+  \institution{University of Virginia}
+  \department{School of Engineering}
+  \city{Charlottesville}
+  \state{VA}
+  \postcode{22903}
+  \country{USA}
+}
 \author{Ting Yan}
-\affiliation{Eaton Innovation Center}
+\affiliation{%
+  \institution{Eaton Innovation Center}
+  \city{Prague}
+  \country{Czech Republic}}
 \author{Tian He}
-\affiliation{University of Minnesota}
+\affiliation{%
+  \institution{University of Minnesota}
+  \country{USA}}
 \author{Chengdu Huang}
-\affiliation{Google}
 \author{John A. Stankovic}
-\affiliation{University of Virginia}
 \author{Tarek F. Abdelzaher}
-\affiliation{University of Illinois at Urbana-Champaign}
-\affiliation{University of Virginia}
+\affiliation{%
+  \institution{University of Virginia}
+  \department{School of Engineering}
+  \city{Charlottesville}
+  \state{VA}
+  \postcode{22903}
+  \country{USA}
+}
+
 
 \begin{abstract}
 Multifrequency media access control has been well understood in
