--- a/sample-sigchi-a.tex
+++ b/sample-sigchi-a.tex
@@ -34,36 +34,45 @@
 \title{SIGCHI Extended Abstracts Sample File}
 
 \author{First Author}
-\affiliation{University of Author\\
-  Authortown, CA 94022, USA} 
+\affiliation{%
+  \institution{University of Author}
+  \city{Authortown}
+  \state{CA} 
+  \postcode{94022} 
+  \country{USA} }
 \email{author1@anotherco.edu}
 
 \author{Second Author}
-\affiliation{VP, Authoring\\
-  Authorship Holdings, Ltd.\\
-  Awdur SA22 8PP, UK}
+\affiliation{%
+  \position{VP, Authoring}
+  \institution{Authorship Holdings, Ltd.}
+  \city{Awdur} 
+  \postcode{SA22 8PP}
+  \country{UK}}
 \email{author2@author.ac.uk}
 
 \author{Third Author \\
   Fourth Author}
-\affiliation{L\={e}khaka Labs\\
-  Bengaluru 560 080, India}
+\affiliation{%
+  \institution{L\={e}khaka Labs}
+  \city{Bengaluru} \postcode{560 080} \country{India}}
 \email{author3@another.com} 
 \email{author4@another.com}
 
 \author{Fifth Author}
-\affiliation{YetAuthorCo, Inc.\\
-  Authortown, BC V6M 22P Canada}
+\affiliation{\institution{YetAuthorCo, Inc.}
+  \city{Authortown} \state{BC}
+  \postcode{V6M 22P} \country{Canada}}
 \email{author5@anotherco.com} 
 
 \author{Sixth Author}
-\affiliation{Universit\'e de Auteur-Sud\\
-  40222 Auteur France}
+\affiliation{\institution{Universit\'e de Auteur-Sud}
+  \city{Auteur} \postcode{40222} \country{France}}
 \email{author6@author.fr} 
 
 \author{Seventh Author}
-\affiliation{University of Umbhali\\
-  Pretoria, South Africa}
+\affiliation{\institution{University of Umbhali}
+  \city{Pretoria} \country{South Africa}}
 \email{author7@umbhaliu.ac.za} 
 
 % The default list of authors is too long for headers}
