--- a/sample-sigconf.tex
+++ b/sample-sigconf.tex
@@ -37,51 +37,69 @@
 \subtitlenote{The full version of the author's guide is available as
   \texttt{acmart.pdf} document}
 
+
 \author{Ben Trovato}
 \authornote{Dr.~Trovato insisted his name be first.}
-\affiliation{Institute for Clarity in Documentation\\
-  P.O. Box 1212\\
-  Dublin, Ohio 43017-6221}
+\orcid{1234-5678-9012}
+\affiliation{%
+  \institution{Institute for Clarity in Documentation}
+  \streetaddress{P.O. Box 1212}
+  \city{Dublin} 
+  \state{Ohio} 
+  \postcode{43017-6221}
+}
 \email{trovato@corporation.com}
 
 \author{G.K.M. Tobin}
 \authornote{The secretary disavows any knowledge of this author's actions.}
-\affiliation{Institute for Clarity in Documentation\\
-  P.O. Box 1212\\
-  Dublin, Ohio 43017-6221}
+\affiliation{%
+  \institution{Institute for Clarity in Documentation}
+  \streetaddress{P.O. Box 1212}
+  \city{Dublin} 
+  \state{Ohio} 
+  \postcode{43017-6221}
+}
 \email{webmaster@marysville-ohio.com}
 
 \author{Lars Th{\o}rv{\"a}ld}
 \authornote{This author is the
   one who did all the really hard work.}
-\affiliation{The Th{\o}rv{\"a}ld Group\\
-  1 Th{\o}rv{\"a}ld Circle\\
-  Hekla, Iceland}
+\affiliation{%
+  \institution{The Th{\o}rv{\"a}ld Group}
+  \streetaddress{1 Th{\o}rv{\"a}ld Circle}
+  \city{Hekla} 
+  \country{Iceland}}
 \email{larst@affiliation.org}
 
 \author{Lawrence P. Leipuner}
-\affiliation{Brookhaven Laboratories\\
-  P.O. Box 5000}
+\affiliation{
+  \institution{Brookhaven Laboratories}
+  \streetaddress{P.O. Box 5000}}
 \email{lleipuner@researchlabs.org}
 
 \author{Sean Fogarty}
-\affiliation{NASA Ames Research Center\\
-  Moffett Field\\
-  California 94035}
+\affiliation{%
+  \institution{NASA Ames Research Center}
+  \city{Moffett Field}
+  \state{California} 
+  \postcode{94035}}
 \email{fogartys@amesres.org}
 
 \author{Charles Palmer}
-\affiliation{Palmer Research Laboratories\\
-  8600 Datapoint Drive\\
-  San Antonio, Texas 78229}
+\affiliation{%
+  \institution{Palmer Research Laboratories}
+  \streetaddress{8600 Datapoint Drive}
+  \city{San Antonio}
+  \state{Texas} 
+  \postcode{78229}}
 \email{cpalmer@prl.com}
 
 \author{John Smith}
-\affiliation{The Th{\o}rv{\"a}ld Group}
+\affiliation{\institution{The Th{\o}rv{\"a}ld Group}}
 \email{jsmith@affiliation.org}
 
 \author{Julius P.~Kumquat}
-\affiliation{The Kumquat Consortium} 
+\affiliation{\institution{The Kumquat Consortium}}
 \email{jpkumquat@consortium.net}
 
 % The default list of authors is too long for headers}
