--- a/samplebody-journals.tex
+++ b/samplebody-journals.tex
@@ -359,11 +359,18 @@ MAC layer.
   
 \end{screenonly}
 
-\section*{Acknowledgements}
+\begin{acks}
 
 The authors would like to thank Dr. Maura Turolla of Telecom
 Italia for providing specifications about the application scenario.
 
+The work is supported by the \gsponsor{GS501100001809}{National
+  Natural Science Foundation of
+  China}{http://dx.doi.org/10.13039/501100001809} under Grant No.:
+\grantnum{GS501100001809}{61273304_a}.
+
+
+\end{acks}
 
 % Bibliography
 \bibliographystyle{ACM-Reference-Format-Journals}
