--- a/README
+++ b/README
@@ -23,3 +23,6 @@ version 1.13    Formatting changes: headers, folios etc.
 version 1.14    Warn about undefined citation styles; move definitions
                 of acmauthoryear and acmnumeric citation styles before
                 use.
+
+version 1.15    New structured affiliation command.
+                New commands for acknowledgements.
